--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/paypal-rest-sdk": "^1.7.9",
+    "@types/socket.io": "^3.0.1",
     "@types/validator": "^13.11.6",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
