--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/winston": "^2.4.4",
-    "axios": "^1.7.7",
+    "apple-signin-auth": "^1.7.8",
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.1",
     "cookie-parser": "^1.4.6",
@@ -28,6 +29,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.15.1",
     "http-status": "^1.7.3",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
@@ -44,6 +46,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.16",
