--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.815.0",
         "@types/winston": "^2.4.4",
         "apple-signin-auth": "^1.7.8",
         "axios": "^1.8.2",
@@ -35,6 +36,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.1",
         "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1",
         "node-cron": "^3.0.3",
         "nodemailer": "^6.9.7",
         "paypal-rest-sdk": "^1.8.1",
@@ -53,6 +55,7 @@
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.5",
         "@types/multer": "^1.4.11",
+        "@types/multer-s3": "^3.0.3",
         "@types/node-cron": "^3.0.11",
         "@types/nodemailer": "^6.4.14",
         "@types/paypal-rest-sdk": "^1.7.9",
