--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "nodemailer": "^6.9.7",
         "paypal-rest-sdk": "^1.8.1",
         "smartsheet": "^4.2.0",
+        "socket.io": "^4.8.1",
         "stripe": "^17.2.1",
         "validator": "^13.11.0",
         "winston": "^3.14.2",
